Parent receiving tasks #12

--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -1803,6 +1803,11 @@ let allUsers = [];
 const expandedTasks = new Set();
 
 
+fetchUsersFromServer(adminEmail).then(users => {
+    allUsers = users;
+    generateScrollableDates();
+});
+
 
 
 
